WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28753
Excessive number of threads (and a crash)
https://bugs.webkit.org/show_bug.cgi?id=28753
Summary
Excessive number of threads (and a crash)
David Smith
Reported
2009-08-26 15:54:47 PDT
Created
attachment 38642
[details]
Crashlog I haven't been able to figure out how to reproduce this beyond "browse normally with a WebKit nightly build for a while". The attached crashlog is representative, but it doesn't always crash. Sometimes it just spins up a ton of threads for a while, then quiets down again.
Attachments
Crashlog
(1.16 MB, application/octet-stream)
2009-08-26 15:54 PDT
,
David Smith
no flags
Details
proposed fix
(8.23 KB, patch)
2009-08-27 16:57 PDT
,
Alexey Proskuryakov
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-08-26 15:56:19 PDT
<
rdar://problem/7173448
>
Alexey Proskuryakov
Comment 2
2009-08-27 16:57:15 PDT
Created
attachment 38700
[details]
proposed fix I could never reproduce the crash, but this should greatly reduce strain on CFNetwork. Magic numbers used here are not special or tested in any way. I did try browsing with some additional logging, and both CFHost calls and network requests made seemed reasonable.
Alexey Proskuryakov
Comment 3
2009-08-27 17:12:22 PDT
Fixed in <
http://trac.webkit.org/changeset/47845
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug